# HDRImageViewer

./: .editorconfig  .gitattributes  .gitignore  App.xaml  App.xaml.cs  CHANGELOG.md  HdrImageViewer.csproj  HdrImageViewer.slnx  MainWindow.xaml  MainWindow.xaml.cs  Package.appxmanifest  README.md  THIRD_PARTY_NOTICES.md  app.manifest  app.portable.manifest
Infrastructure/: BooleanToOpacityConverter.cs  ObservableObject.cs  RangeObservableCollection.cs
Models/: CompanionMedia.cs  CompanionVideoProbeResult.cs  ExrProbeResult.cs  GainMapColorGamut.cs  GainMapMetadata.cs  GainMapProbeResult.cs  HdrImageDocument.cs  HdrImageKind.cs  HeifAvifProbeResult.cs  ImageFormatDescriptor.cs  JxlProbeResult.cs  WicImageProbeResult.cs
Pages/: AboutPage.xaml  AboutPage.xaml.cs  HomePage.CompanionMedia.cs  HomePage.Crop.cs  HomePage.Export.cs  HomePage.FileActions.cs  HomePage.FolderNavigation.cs  HomePage.xaml  HomePage.xaml.cs  SettingsPage.xaml  SettingsPage.xaml.cs
Presentation/: FilmstripImageItem.cs  FilmstripThumbnailController.cs  ImageDeletionNavigation.cs  ImageLoadController.cs  ImagePreloadController.cs  ViewerViewportMath.cs
Properties/: launchSettings.json
Rendering/: ColorGamutMappingMode.cs  D3D11HdrRenderPipeline.cs  GainMapShaderConstants.cs  GainmapViewMode.cs  HdrColorMath.cs  HdrDisplayConfiguration.cs  HdrFrame.cs  HdrHeadroomMode.cs  HdrRenderIntent.cs  IHdrRenderPipeline.cs
Services/: AppSettingsService.cs  AvifGainMapDecoder.cs  BitmapDecodeService.cs  CompanionVideoProbe.cs  DecodedBitmap.cs  DecodedCachePolicy.cs  DecoderCatalog.cs  DirectoryMetadataCache.cs  EdidHdrMetadataReader.cs  ExifMetadataReader.cs  ExrProbe.cs  FileSignatureProbe.cs  GainMapHdrExportService.cs  GainMapJpegProbe.cs  GainMapRenderInputDecoder.cs  GainMapRenderInputs.cs  HdrExportBackendCatalog.cs  HeifAvifProbe.cs  HeifGainMapDecoder.cs  HeifTmapBoxReader.cs  IccColorProfileDetector.cs  ImageDocumentLoader.cs  ImageLoadResult.cs  ImagePreloadCache.cs  IsoGainMapMetadata.cs  JxlProbe.cs  (+12 more)
native/HdrImageViewer.Native/: CMakeLists.txt  README.md
native/HdrImageViewer.Native/src/: exr_bridge.cpp
(+36 files in other folders)
